Change scrollbars to auto in memberships, add padding. Reduce font size for graphs to avoid clipping.

--- a/public/stylesheets/profiles.styl
+++ b/public/stylesheets/profiles.styl
@@ -407,7 +407,8 @@ section
 .profile-memberships
   .profile-memberships-content
       max-height 500px
-      overflow-y scroll
+      overflow-y auto 
+      padding-right 1em
   .profile-summary-content,
   .profile-memberships-content
     font-size: 1em
@@ -660,7 +661,8 @@ section
 .summary-chart
     svg
         height 500px
-        width 100%
+        width 97%
+        font-size: 0.7em
 
 .nvd3
     .nv-axis
